--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -1,53 +1,55 @@
 <%- include('./includes/head.ejs') %>
-<link rel="stylesheet" href="/css/main.css">
-</head>
+     <link rel="stylesheet" href="/css/main.css">
+     </head>
 
-<body style="background-color: #FEFBF3;">
-     <div class="navbar navbar-expand-lg fixed-top navbar-light"
-          style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
+     <body style="background-color: #FEFBF3;">
+          <div class="navbar navbar-expand-lg fixed-top navbar-light"
+               style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
+               <div class="container">
+                    <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo"
+                              class="img-fluid"></a>
+                    <a href="../" class="navbar-brand">Mosa3da</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                         data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                         aria-label="Toggle navigation">
+                         <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+
+                         <ul class="navbar-nav ms-md-auto">
+                              <li class="nav-item">
+                                   <a target="_blank" rel="noopener" class="nav-link"
+                                        href="https://github.com/thomaspark/bootswatch/"><i class="fa fa-globe"
+                                             aria-hidden="true"></i> العربية</a>
+                              </li>
+                         </ul>
+                    </div>
+               </div>
+          </div>
+
           <div class="container">
-               <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo"
-                         class="img-fluid"></a>
-               <a href="../" class="navbar-brand">Mosa3da</a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
-                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarResponsive">
-
-                    <ul class="navbar-nav ms-md-auto">
-                         <li class="nav-item">
-                              <a target="_blank" rel="noopener" class="nav-link"
-                                   href="https://github.com/thomaspark/bootswatch/"><i class="fa fa-globe"
-                                        aria-hidden="true"></i> العربية</a>
-                         </li>
-                    </ul>
-               </div>
-          </div>
-     </div>
-
-
-     <div class="row mt-5" style="padding-top: 5em;">
-          <div style="text-align: center;">
-               <%- include("./partials/errorMessages.ejs") %>
-           </div>
-          <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Reset Password</h1>
-          <h1 class="lead text-center" style="color: black;">Please enter your email to continue</h1>
-          <div class="form-group" style="padding: 1em;">
-               <div class="col-md-6 m-auto">
-                    <form action="" method="post">
-                         <input style=" border-radius:10px;" type="email" name="email" class="form-control"
-                              placeholder="Email" />
-                         <br>
-                         <div class="text-center">
-                              <button type="submit" class="btn btn-primary btn-block"
-                                   style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Submit</button>
+               <div class="row mt-5" style="padding-top: 5em;">
+                    <div style="text-align: center;">
+                         <%- include("./partials/errorMessages.ejs") %>
+                    </div>
+                    <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Reset Password
+                    </h1>
+                    <h1 class="lead text-center" style="color: black;">Please enter your email to continue</h1>
+                    <div class="form-group" style="padding: 1em;">
+                         <div class="col-md-6 m-auto">
+                              <form action="" method="post">
+                                   <input style=" border-radius:10px;" type="email" name="email" class="form-control"
+                                        placeholder="Email" />
+                                   <br>
+                                   <div class="text-center">
+                                        <button type="submit" class="btn btn-primary btn-block"
+                                             style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Submit</button>
+                                   </div>
+                              </form>
                          </div>
-                    </form>
+                    </div>
                </div>
           </div>
-     </div>
+     </body>
 
-</body>
-
-</html>
+     </html>
