--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,56 +1,52 @@
-<%- include('./includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/homepage.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/homepage.css">
+<link rel="stylesheet" href="/css/footer.css">
+<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </head>
-<body>
-  <%- include('./includes/navbar.ejs') %>
+<%- include('./includes/navbar.ejs') %>
 
-    <!-- <div class="container-fluid"> -->
 
-      <!-- Nav Bar -->
 
-      
+  <div class="container-fluid">
 
-      <!-- Title -->
+    <div class="row">
 
-      <div class="page-content page-container" style="display: contents;">
+      <div class="col-lg-4">
+        <div class="main-card">
+          <div class="inner-card">
 
-          <div class="flex-fill">
-            <div class="main-card">
-              <div class="inner-card">
-                
-                <img src="/images/logo-icon.png" alt="logo" class="logo-img inner-card-element">
-               
-                <h2 class="inner-card-element">Your Inner Peace Is a Click Away.</h2>              
-               
-                <button class="btn btn-primary btn-block get-started-btn inner-card-element" style="background-color: #79B4B7; border-color: #79B4B7;">
-                  <a href="/signup" style="text-decoration: none; color: white;">Get Started</a>
-                </button>    
-  
-                <p class="inner-card-p">Click Get Started to sign up and start your healing journey.</p>
-                
-              </div>
-            </div>
+            <img src="/images/logo-icon.png" alt="logo" class="logo-img inner-card-element">
+
+            <h2 class="inner-card-element">Your Inner Peace Is a Click Away.</h2>
+
+            <button class="btn btn-primary btn-block get-started-btn inner-card-element"
+              style="background-color: #79B4B7; border-color: #79B4B7;">
+              <a href="/signup" style="text-decoration: none; color: white;">Get Started</a>
+            </button>
+
+            <p class="inner-card-p">Click Get Started to sign up and start your healing journey.</p>
+
           </div>
+        </div>
       </div>
 
-      
-    <!-- </div> -->
-    <div class="footer-basic" style="margin-top: 10px;">
-      <footer style="overflow: hidden;">
-          <div class="social"><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-          <ul class="list-inline">
-              <li class="list-inline-item"><a href="#">Home</a></li>
-              <li class="list-inline-item"><a href="/therapists">Therapist List</a></li>
-              <li class="list-inline-item"><a href="#">About Us</a></li>
-          </ul>
-          <p class="copyright">Mosa3da © 2022</p>
-      </footer>
-  </div>
-      
+      <div class="col-lg-8 image">
+        <img class="main-img" src="/images/main-image.jpg" alt="banner" />
+      </div>
 
-      
-</body>
-</html>
+    </div>
+  </div>
+
+
+  <div class="footer-basic" style="margin-top: 10px;">
+    <footer style="overflow: hidden;">
+      <div class="social" style="padding-bottom:0;">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+      </div>
+      <p class="copyright">Mosa3da © 2022</p>
+    </footer>
+  </div>
+
+  </html>
