--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
         <%- body %>
-    </div>
+    <!-- </div> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
