--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,71 +1,68 @@
 <%- include('./includes/head.ejs') %>
   <link rel="stylesheet" href="/css/main.css">
-</head>
+  </head>
 
 
-<body style="background-color: #FEFBF3;">
+  <body style="background-color: #FEFBF3;">
 
-  
-    <div class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
-        <div class="container">
-          <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo" class="img-fluid"></a>
-          <a href="/" class="navbar-brand">Mosa3da</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
 
-            <ul class="navbar-nav ms-md-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="/signup">Sign Up</a>
-              </li>
-            </ul>
-          </div>
+    <div class="navbar navbar-expand-lg fixed-top navbar-light"
+      style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
+      <div class="container">
+        <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo" class="img-fluid"></a>
+        <a href="/" class="navbar-brand">Mosa3da</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+
+          <ul class="navbar-nav ms-md-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+          </ul>
         </div>
-      </div>
-
-<div class="row mt-5" style="padding-top: 5em;">
-    <div class="col-md-6 m-auto">
-      <div class="card card-body" style="background-color: #FEFBF3; border: 0cm; box-shadow: 0 0 0 0">
-        <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Sign in to your Account</h1>
-        <h1 class="lead text-center" style="color: black;">Nice to see you again!</h1>
-        <div style="text-align: center;">
-          <%- include("./partials/errorMessages.ejs") %>
-        </div>
-        <form action="/login" method="POST">
-          <div class="form-group" style="padding: 1em;">
-            <input style=" border-radius:10px;"
-              type="email"
-              id="email"
-              name="email"
-              class="form-control"
-              placeholder="Email"
-            />
-          </div>
-          <div class="form-group" style="padding: 1em;">
-            <input style=" border-radius:10px;"
-              type="password"
-              id="password"
-              name="password"
-              class="form-control"
-              placeholder="Password"
-            />
-          </div>
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-block" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Sign in</button>
-          </div>
-        </form>
-        <p class="lead mt-4 text-center" style="color: black; font-weight: 300; font-size: 20px;">
-          <a href="/forgot-password" style="color: black;">Reset Password</a>
-        </p>
-        <p class="lead text-center" style="color: black; font-weight: 300;">
-          Dont't have an account? <a href="/signup" style="color: black;">Sign up now!</a>
-        </p>
-        
       </div>
     </div>
-  </div>
 
-  
-</body>
-</html>
+    <div class="container">
+      <div class="row mt-5" style="padding-top: 5em;">
+        <div class="col-md-6 m-auto">
+          <div class="card card-body" style="background-color: #FEFBF3; border: 0cm; box-shadow: 0 0 0 0">
+            <h1 class="lead text-center" style="font-size: 3em; font-weight: 400; color: black;">Sign in to your Account
+            </h1>
+            <h1 class="lead text-center" style="color: black;">Nice to see you again!</h1>
+            <div style="text-align: center;">
+              <%- include("./partials/errorMessages.ejs") %>
+            </div>
+            <form action="/login" method="POST">
+              <div class="form-group" style="padding: 1em;">
+                <input style=" border-radius:10px;" type="email" id="email" name="email" class="form-control"
+                  placeholder="Email" />
+              </div>
+              <div class="form-group" style="padding: 1em;">
+                <input style=" border-radius:10px;" type="password" id="password" name="password" class="form-control"
+                  placeholder="Password" />
+              </div>
+              <div class="text-center">
+                <button type="submit" class="btn btn-primary btn-block"
+                  style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Sign
+                  in</button>
+              </div>
+            </form>
+            <p class="lead mt-4 text-center" style="color: black; font-weight: 300; font-size: 20px;">
+              <a href="/forgot-password" style="color: black;">Reset Password</a>
+            </p>
+            <p class="lead text-center" style="color: black; font-weight: 300;">
+              Dont't have an account? <a href="/signup" style="color: black;">Sign up now!</a>
+            </p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </body>
+
+  </html>
