--- a/views/therapistAccount.ejs
+++ b/views/therapistAccount.ejs
@@ -9,6 +9,7 @@
         <%- include('./includes/navbar.ejs') %>
 
 
+        <div class="container">
             <div class="page-content page-container" id="page-content" style="margin-top: 100px; ">
                 <div class="padding">
                     <div class="row container d-flex">
@@ -76,6 +77,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
 
             <% if (availableDates.availableDate.length> 0) { %>
