--- a/views/user-profile-edit.ejs
+++ b/views/user-profile-edit.ejs
@@ -5,111 +5,112 @@
 
   <body>
     <%- include('./includes/navbar.ejs') %>
+      <div class="container">
+        <form action="/edit-account" method="POST" enctype="multipart/form-data">
 
-      <form action="/edit-account" method="POST" enctype="multipart/form-data">
-
-        <div class="page-content page-container" id="page-content" style="margin-top: 75px">
-          <div class="padding">
-            <div style="text-align: center;">
-              <%- include("./partials/errorMessages.ejs") %>
-            </div>
-            <h4 class="text-center" style="margin-bottom: 25px;">Editing Profile</h4>
-            <div class="row container d-flex justify-content-center">
-              <div class="col-xl-12 col-md-12">
-                <div class="card user-card-full">
-                  <div class="row m-l-0 m-r-0">
-                    <div class="col-sm-4 user-profile" style="background-color: #79B4B7;">
-                      <div class="card-block text-center text-white">
-                        <% if(user.image=="https://i.imgur.com/fUWz80K.jpg" ) { %>
-                          <div class="m-b-25"> <img src="<%= user.image %>" class="img-radius" alt="User-Profile-Image"
-                              style="max-width: 50%; max-height: 50%;"> </div>
-                          <% } else { %>
-                            <div class="m-b-25"> <img src="/<%= user.image %>" class="img-radius"
+          <div class="page-content page-container" id="page-content" style="margin-top: 75px">
+            <div class="padding">
+              <div style="text-align: center;">
+                <%- include("./partials/errorMessages.ejs") %>
+              </div>
+              <h4 class="text-center" style="margin-bottom: 25px;">Editing Profile</h4>
+              <div class="row container d-flex justify-content-center">
+                <div class="col-xl-12 col-md-12">
+                  <div class="card user-card-full">
+                    <div class="row m-l-0 m-r-0">
+                      <div class="col-sm-4 user-profile" style="background-color: #79B4B7;">
+                        <div class="card-block text-center text-white">
+                          <% if(user.image=="https://i.imgur.com/fUWz80K.jpg" ) { %>
+                            <div class="m-b-25"> <img src="<%= user.image %>" class="img-radius"
                                 alt="User-Profile-Image" style="max-width: 50%; max-height: 50%;"> </div>
-                            <% } %>
-                              <div class="form-group" style="margin-top: -15px; margin-bottom: 25px;">
-                                <input style=" border-radius:10px; text-align: center;;" type="file" id="image"
-                                  name="image" class="form-control" />
-                              </div>
-                              <p class="m-b-10 f-w-600">Name</p>
-                              <div class="form-group" style="margin-top: -10px;">
-                                <input style=" border-radius:10px; text-align: center;" type="name" id="name"
-                                  name="name" class="form-control" value="<%= user.name %>" />
-                              </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-8">
-                      <div class="card-block">
-                        <h4 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h4>
-                        <div class="row">
-                          <div class="col-sm-6">
-                            <div class="row">
-                              <p class="m-b-10 f-w-600">Email</p>
-                              <div class="form-group">
-                                <input style=" border-radius:10px;" type="email" id="email" name="email"
-                                  class="form-control" value="<%= user.email %>" />
-                              </div>
-                            </div>
-
-                            <div class="row">
-                              <p class="mt-3 f-w-600">Gender</p>
-
-                              <% if(user.gender==='Male' ) { %>
-                                <div class="text-center" style="margin: 10px;">
-                                  <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="gender" id="gender" value="Male"
-                                      checked>
-                                    <label class="form-check-label" for="inlineRadio1">Male</label>
-                                  </div>
-                                  <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="gender" id="gender"
-                                      value="Female">
-                                    <label class="form-check-label" for="inlineRadio2">Female</label>
-                                  </div>
+                            <% } else { %>
+                              <div class="m-b-25"> <img src="/<%= user.image %>" class="img-radius"
+                                  alt="User-Profile-Image" style="max-width: 50%; max-height: 50%;"> </div>
+                              <% } %>
+                                <div class="form-group" style="margin-top: -15px; margin-bottom: 25px;">
+                                  <input style=" border-radius:10px; text-align: center;;" type="file" id="image"
+                                    name="image" class="form-control" />
                                 </div>
+                                <p class="m-b-10 f-w-600">Name</p>
+                                <div class="form-group" style="margin-top: -10px;">
+                                  <input style=" border-radius:10px; text-align: center;" type="name" id="name"
+                                    name="name" class="form-control" value="<%= user.name %>" />
+                                </div>
+                        </div>
+                      </div>
+                      <div class="col-sm-8">
+                        <div class="card-block">
+                          <h4 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h4>
+                          <div class="row">
+                            <div class="col-sm-6">
+                              <div class="row">
+                                <p class="m-b-10 f-w-600">Email</p>
+                                <div class="form-group">
+                                  <input style=" border-radius:10px;" type="email" id="email" name="email"
+                                    class="form-control" value="<%= user.email %>" />
+                                </div>
+                              </div>
 
-                                <% } else { %>
+                              <div class="row">
+                                <p class="mt-3 f-w-600">Gender</p>
+
+                                <% if(user.gender==='Male' ) { %>
                                   <div class="text-center" style="margin: 10px;">
                                     <div class="form-check form-check-inline">
                                       <input class="form-check-input" type="radio" name="gender" id="gender"
-                                        value="Male">
+                                        value="Male" checked>
                                       <label class="form-check-label" for="inlineRadio1">Male</label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                       <input class="form-check-input" type="radio" name="gender" id="gender"
-                                        value="Female" checked>
+                                        value="Female">
                                       <label class="form-check-label" for="inlineRadio2">Female</label>
                                     </div>
                                   </div>
-                                  <% } %>
 
-                                    <p class="lead mt-4 text-center">
-                                      <a href="/change-password" class="btn btn-outline-info"
-                                        style="color: black; font-weight: 400; font-size: 15px;">Change Password</a>
-                                    </p>
+                                  <% } else { %>
+                                    <div class="text-center" style="margin: 10px;">
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" id="gender"
+                                          value="Male">
+                                        <label class="form-check-label" for="inlineRadio1">Male</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" id="gender"
+                                          value="Female" checked>
+                                        <label class="form-check-label" for="inlineRadio2">Female</label>
+                                      </div>
+                                    </div>
+                                    <% } %>
+
+                                      <p class="lead mt-4 text-center">
+                                        <a href="/change-password" class="btn btn-outline-info"
+                                          style="color: black; font-weight: 400; font-size: 15px;">Change Password</a>
+                                      </p>
+                              </div>
                             </div>
-                          </div>
 
 
-                          <div class="col-sm-6 text-center">
+                            <div class="col-sm-6 text-center">
 
-                            <p class="f-w-600">Specialties</p>
+                              <p class="f-w-600">Specialties</p>
 
-                            <select class="selectpicker" multiple data-size="7" name="specialties">
-                              <option value="Depression">Depression</option>
-                              <option value="Addiction">Addiction</option>
-                              <option value="Relations">Relations</option>
-                              <option value="Separation Anxiety Disorder">Separation Anxiety Disorder</option>
-                              <option value="Generalized Anxiety Disorder">Generalized Anxiety Disorder</option>
-                              <option value="Adolescence problems">Adolescence problems</option>
-                              <option value="Mood Disorders">Mood Disorders</option>
-                              <option value="Anxiety Disorders">Anxiety Disorders</option>
-                              <option value="Personality disorders">Personality disorders</option>
-                              <option value="Sexual disorders">Sexual disorders</option>
-                              <option value="Autistic Spectrum Disorders">Autistic Spectrum Disorders</option>
-                              <option value="Posttraumatic Stress Disorder">Posttraumatic Stress Disorder</option>
-                            </select>
+                              <select class="selectpicker" multiple data-size="7" name="specialties">
+                                <option value="Depression">Depression</option>
+                                <option value="Addiction">Addiction</option>
+                                <option value="Relations">Relations</option>
+                                <option value="Separation Anxiety Disorder">Separation Anxiety Disorder</option>
+                                <option value="Generalized Anxiety Disorder">Generalized Anxiety Disorder</option>
+                                <option value="Adolescence problems">Adolescence problems</option>
+                                <option value="Mood Disorders">Mood Disorders</option>
+                                <option value="Anxiety Disorders">Anxiety Disorders</option>
+                                <option value="Personality disorders">Personality disorders</option>
+                                <option value="Sexual disorders">Sexual disorders</option>
+                                <option value="Autistic Spectrum Disorders">Autistic Spectrum Disorders</option>
+                                <option value="Posttraumatic Stress Disorder">Posttraumatic Stress Disorder</option>
+                              </select>
 
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -119,17 +120,16 @@
               </div>
             </div>
           </div>
-        </div>
 
 
-        <div class="text-center" style="margin-top: -50px;">
-          <button type="submit" class="btn btn-primary btn-block"
-            style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-top: 10px;">Save
-            Changes</button>
-        </div>
+          <div class="text-center" style="margin-top: -50px;">
+            <button type="submit" class="btn btn-primary btn-block"
+              style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-top: 10px;">Save
+              Changes</button>
+          </div>
 
-      </form>
-
+        </form>
+      </div>
       <!-- Latest compiled and minified JavaScript -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"
         integrity="sha512-FHZVRMUW9FsXobt+ONiix6Z0tIkxvQfxtCSirkKc5Sb4TKHmqq1dZa8DphF0XqKb3ldLu/wgMa8mT6uXiLlRlw=="
