--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -2,41 +2,56 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/account.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-</head>
-<body>
-    <%- include('./includes/navbar.ejs') %>
+    </head>
 
-    <div class="page-content page-container" id="page-content" style="margin-top: 75px; ">
-        <div class="padding">
-            <div style="text-align: center;">
-                <%- include("./partials/errorMessages.ejs") %>
-            </div>
-            <h4 class="text-center" style="margin-bottom: 25px;">Profile</h4>
-            <div class="row container d-flex justify-content-center">
-                <div class="col-xl-12 col-md-12">
-                    <div class="card user-card-full">
-                        <div class="row m-l-0 m-r-0">
-                            <div class="col-sm-4 user-profile" style="background-color: #79B4B7;">
-                                <div class="card-block text-center text-white">
-                                    <% if(user.image == "https://i.imgur.com/fUWz80K.jpg") { %>
-                                        <div class="m-b-25"> <img src="<%= user.image %>" class="img-radius" alt="User-Profile-Image" style="max-width: 50%; max-height: 50%;"> </div>
-                                    <% } else { %>
-                                        <div class="m-b-25"> <img src="/<%= user.image %>" class="img-radius" alt="User-Profile-Image" style="max-width: 50%; max-height: 50%;"> </div>
-                                    <% } %>
-                                    <h5 class="f-w-600"><%= user.name %></h5>
-                                </div>
-                            </div>
-                            <div class="col-sm-8">
-                                <div class="card-block">
-                                    <h4 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h4>
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <p class="m-b-10 f-w-600">Email</p>
-                                            <h5 class="text-muted f-w-400"><%= user.email %></h5>
+    <body>
+        <%- include('./includes/navbar.ejs') %>
+
+            <div class="container">
+                <div class="page-content page-container" id="page-content" style="margin-top: 75px; ">
+                    <div class="padding">
+                        <div style="text-align: center;">
+                            <%- include("./partials/errorMessages.ejs") %>
+                        </div>
+                        <h4 class="text-center" style="margin-bottom: 25px;">Profile</h4>
+                        <div class="row container d-flex justify-content-center">
+                            <div class="col-xl-12 col-md-12">
+                                <div class="card user-card-full">
+                                    <div class="row m-l-0 m-r-0">
+                                        <div class="col-sm-4 user-profile" style="background-color: #79B4B7;">
+                                            <div class="card-block text-center text-white">
+                                                <% if(user.image=="https://i.imgur.com/fUWz80K.jpg" ) { %>
+                                                    <div class="m-b-25"> <img src="<%= user.image %>" class="img-radius"
+                                                            alt="User-Profile-Image"
+                                                            style="max-width: 50%; max-height: 50%;"> </div>
+                                                    <% } else { %>
+                                                        <div class="m-b-25"> <img src="/<%= user.image %>"
+                                                                class="img-radius" alt="User-Profile-Image"
+                                                                style="max-width: 50%; max-height: 50%;"> </div>
+                                                        <% } %>
+                                                            <h5 class="f-w-600">
+                                                                <%= user.name %>
+                                                            </h5>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-6">
-                                            <p class="m-b-10 f-w-600">Gender</p>
-                                            <h5 class="text-muted f-w-400"><%= user.gender %></h5>
+                                        <div class="col-sm-8">
+                                            <div class="card-block">
+                                                <h4 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h4>
+                                                <div class="row">
+                                                    <div class="col-sm-6">
+                                                        <p class="m-b-10 f-w-600">Email</p>
+                                                        <h5 class="text-muted f-w-400">
+                                                            <%= user.email %>
+                                                        </h5>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <p class="m-b-10 f-w-600">Gender</p>
+                                                        <h5 class="text-muted f-w-400">
+                                                            <%= user.gender %>
+                                                        </h5>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -45,56 +60,58 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-
-    <div class="text-center" style="margin-top: -50px;">
-        <i class="fas fa-edit"></i>  <a class="lead text-center" href="/edit-account" style="color: black; font-weight: 300;"> Edit Profile </a>
-    </div>
-  </div>
-</div>
-
-
-
-
-<% if(user.role === 'therapist') { %>
-        
-        <form action="/add-new-session", method="POST" style="margin-top: 75px;">
-            <h4 class="text-center" style="margin-bottom: 25px;">Add New Available Session</h4>
-            <div class="text-center" style="max-width: 25%; text-align: center; margin: auto;">
-                <input type="datetime-local" placeholder="Select Time and Date" id="sessionTime" name="sessionTime" style="display: block;">
-                <select name="duration" class="form-select" style="margin-top: 10px;">
-                    <option selected id="duration" value="15 Minutes" name="duration">15 Minutes</option>
-                    <option id="duration" value="30 Minutes" name="duration">30 Minutes</option>
-                    <option id="duration" value="45 Minutes" name="duration">45 Minutes</option>
-                    <option id="duration" value="60 Minutes" name="duration">60 Minutes</option>
-                  </select>
-            </div>  
-            <div class="text-center" style="margin-top: 10px;">
-                <button type="submit" class="btn btn-primary btn-block" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Add Available Session</button>
+            <div class="text-center" style="margin-top: -50px;">
+                <i class="fas fa-edit"></i> <a class="lead text-center" href="/edit-account"
+                    style="color: black; font-weight: 300;"> Edit Profile </a>
             </div>
-        </form>
-<% } %>
+            </div>
+            </div>
 
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+            <% if(user.role==='therapist' ) { %>
 
-<script>
-    config = {
-        enableTime: true,
-        dateFormat: "Y-m-d H:i",
-        altInput: true,
-        altFormat: "F j, Y (h:S K)",
-        minDate: "today",
-        maxDate: new Date().fp_incr(60)
-    }
-    flatpickr("input[type=datetime-local]", config)
-</script>
+                <form action="/add-new-session" , method="POST" style="margin-top: 75px;">
+                    <h4 class="text-center" style="margin-bottom: 25px;">Add New Available Session</h4>
+                    <div class="text-center" style="max-width: 25%; text-align: center; margin: auto;">
+                        <input type="datetime-local" placeholder="Select Time and Date" id="sessionTime"
+                            name="sessionTime" style="display: block;">
+                        <select name="duration" class="form-select" style="margin-top: 10px;">
+                            <option selected id="duration" value="15 Minutes" name="duration">15 Minutes</option>
+                            <option id="duration" value="30 Minutes" name="duration">30 Minutes</option>
+                            <option id="duration" value="45 Minutes" name="duration">45 Minutes</option>
+                            <option id="duration" value="60 Minutes" name="duration">60 Minutes</option>
+                        </select>
+                    </div>
+                    <div class="text-center" style="margin-top: 10px;">
+                        <button type="submit" class="btn btn-primary btn-block"
+                            style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm;">Add
+                            Available Session</button>
+                    </div>
+                </form>
+                <% } %>
 
 
 
-</body>
-</html>
+
+                    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+                    <script>
+                        config = {
+                            enableTime: true,
+                            dateFormat: "Y-m-d H:i",
+                            altInput: true,
+                            altFormat: "F j, Y (h:S K)",
+                            minDate: "today",
+                            maxDate: new Date().fp_incr(60)
+                        }
+                        flatpickr("input[type=datetime-local]", config)
+                    </script>
+
+
+
+    </body>
+
+    </html>
