slight ui changes

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,4 +1,4 @@
-#homepage-footer {
+.homepage-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -9,11 +9,11 @@
     padding: 10px;
     background-color:#F8F0DF;
     color:#4b4c4d;
-    width: auto;
+    /* width: 100%;
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 0; */
     
   }
   
