--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,7 @@
   </div>
 
 
-  <div class="footer-basic" style="margin-top: 10px;">
+  <div class="footer-basic homepage-footer" style="margin-top: 10px;">
     <footer style="overflow: hidden;">
       <div class="social" style="padding-bottom:0;">
         <a href="#"><i class="fab fa-instagram"></i></a>
