--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,7 @@
 <body style="background-color: #FEFBF3;">
 
   <%- include('./includes/navbar.ejs') %>
+  <div class="container">
   <main style="margin-top: 100px;">
 
     <% if(user.role === 'customer') { %>
@@ -92,19 +93,24 @@
       <% } %>
 
     <% } %>
-
+  </main>
+</div>
     <div class="footer-basic" style="margin-top: 10px;">
       <footer style="overflow: hidden;">
-          <div class="social"><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-          <ul class="list-inline">
-              <li class="list-inline-item"><a href="#">Home</a></li>
-              <li class="list-inline-item"><a href="#">Therapist List</a></li>
+          <div class="social container-fluid" style="padding-bottom:0;">
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-facebook-f"></i></a>
+            </div>
+          <!-- <ul class="list-inline">
+              <li class="list-inline-item"><a href="">Home</a></li>
+              <li class="list-inline-item"><a href="/therapists">Therapist List</a></li>
               <li class="list-inline-item"><a href="#">About Us</a></li>
-          </ul>
+          </ul> -->
           <p class="copyright">Mosa3da © 2022</p>
       </footer>
   </div>
-  </main>
+
   
   
   
