Added Group Therapy

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -9,11 +9,11 @@
     padding: 10px;
     background-color:#F8F0DF;
     color:#4b4c4d;
-    /* width: 100%;
+    width: 100%;
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 0; */
+    bottom: 0;
     
   }
   
