ui changes, mainly user & therapist account views

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -5,7 +5,7 @@
 <body style="background-color: #FEFBF3;">
      <%- include('./includes/navbar.ejs') %>
      
-     
+     <div class="container">
      <div class="row mt-5" style="padding-top: 5em;">
           <div style="text-align: center;">
                <%- include("./partials/errorMessages.ejs") %>
@@ -33,6 +33,7 @@
                </div>
           </div>
      </div>
+</div>
 </body>
 
 </html>
