--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,6 +1,49 @@
 <link rel="stylesheet" href="/css/main.css">
+<style>
+  body {
+    background-color: #FEFBF3;
+    color: #79B4B7;
+    font-family: "Muli", sans-serif;
+    font-weight: 100;
+    height: 100vh;
+    margin: 0;
+  }
+
+  .full-height {
+    height: 100vh;
+  }
+
+  .flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .position-r {
+    position: relative;
+  }
+
+  .code {
+    border-right: 3px solid;
+    font-size: 55px;
+    padding: 0 10px 0 10px;
+    text-align: center;
+  }
+
+  .message {
+    font-size: 40px;
+    text-align: center;
+  }
+</style>
+<title>Page Not Found</title>
 
 <body>
-    <%- include('includes/navbar.ejs') %>
+  <%- include('includes/navbar.ejs') %>
+    <div class="flex-center position-r full-height">
+      <div class="code">
+        500 </div>
+
+      <div class="message" style="padding: 10px;">
         <h1>An Error Occured.</h1>
-        <p>Wer're working on fixing this, sorry for the inconvenience!</p>
+        <p>Wer're working on fixing this, sorry for the inconvenience!</p> </div>
+    </div>
