--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,4 @@
+<%- include('./includes/head.ejs') %>
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/homepage.css">
 <link rel="stylesheet" href="/css/footer.css">
