--- a/views/therapistAccount.ejs
+++ b/views/therapistAccount.ejs
@@ -32,40 +32,57 @@
                                                         </h5>
                                         </div>
                                     </div>
+
                                     <div class="col-sm-8">
                                         <div class="card-block">
                                             <h4 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h4>
                                             <div class="row">
                                                 <div class="col-sm-6">
-                                                    <div class="row">
-                                                        <p class="m-b-10 f-w-600">Email</p>
-                                                        <h5 class="text-muted f-w-400">
-                                                            <%= therapist.email %>
-                                                        </h5>
-                                                    </div>
-
-                                                    <% if(user) { %>
-
-                                                        <% for(var i=0; i < therapist.patients.patient.length ; i++) {
-                                                            %>
-                                                            <% if(user._id.equals(therapist.patients.patient[i].patientId))
-                                                                { %>
-                                                                <hr>
-                                                                <div class="row">
-                                                                    <p class="f-w-600">Phone Number</p>
-                                                                    <h5 class="text-muted f-w-400">
-                                                                        <%= therapist.phoneNumber %>
-                                                                    </h5>
-                                                                </div>
-                                                                <% } %>
-                                                                    <% } %>
-
-                                                                        <% } %>
+                                                    <p class="m-b-10 f-w-600">Email</p>
+                                                    <h5 class="text-muted f-w-400">
+                                                        <%= therapist.email %>
+                                                    </h5>
                                                 </div>
+                                                
                                                 <div class="col-sm-6">
+                                                    <p class="m-b-10 f-w-600">Phone Number</p>
+                                                    
+                                                        <% if(user) { %>
+                                                            <% var flag = false %>
+                                                            <% for(var i=0; i < therapist.patients.patient.length ; i++) { %>
+
+                                                                <% if(user._id.equals(therapist.patients.patient[i].patientId)) { %>
+                                                                    <% flag = true %>
+                                                                    <% } %>
+                                                                        <% } %>
+
+                                                                        <%if(flag === true) { %>
+                                                                            <h5 class="text-muted f-w-400">
+                                                                                <%= therapist.phoneNumber %>
+                                                                            </h5>
+                                                                            <% } else { %>
+                                                                                <h5 class="text-muted f-w-400">
+                                                                                    Hidden
+                                                                                </h5>
+                                                                            <% } %>
+                                                                            <% } %>
+                                                </div>
+                                                <div class="col-sm-6" style="margin-top: 35px;">
                                                     <p class="m-b-10 f-w-600">Gender</p>
                                                     <h5 class="text-muted f-w-400">
                                                         <%= therapist.gender %>
+                                                    </h5>
+                                                </div>
+                                                <div class="col-sm-6" style="margin-top: 35px;">
+                                                    <p class="m-b-10 f-w-600">Member Since</p>
+                                                    <h5 class="text-muted f-w-400">
+                                                        <%= moment(therapist.joinDate).utc().format('YYYY-MM-DD') %>
+                                                    </h5>
+                                                </div>
+                                                <div class="col-sm-12" style="margin-top: 35px;">
+                                                    <p class="m-b-10 f-w-600">Specialized In</p>
+                                                    <h5 class="text-muted f-w-400">
+                                                        <%= therapist.specialties %>
                                                     </h5>
                                                 </div>
                                             </div>
@@ -79,6 +96,8 @@
             </div>
         </div>
 
+        
+
 
             <% if (availableDates.availableDate.length> 0) { %>
                 <h4 class="text-center" style="margin-bottom: 25px;">Available Dates</h4>
@@ -87,7 +106,7 @@
                         <div class="profile-card" style="margin-left: 30px; margin-right: 30px; margin-bottom: 60px;">
 
                             <div class="name" style="font-size: 18px;"> Date: <%=
-                                    moment(date.time).utc().format('YYYY-MM-DD HH:mm A') %>
+                                    moment(date.time).format('YYYY-MM-DD hh:mm A') %>
                             </div>
                             <div class="about">Duration: <%= date.duration %>
                             </div>
