fixed footer, added patients tab

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,15 +39,6 @@
   </div>
 
 
-  <div class="footer-basic homepage-footer" style="margin-top: 10px;">
-    <footer style="overflow: hidden;">
-      <div class="social" style="padding-bottom:0;">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-      </div>
-      <p class="copyright">Mosa3da © 2022</p>
-    </footer>
-  </div>
+  <%- include('./includes/footer.ejs') %>
 
   </html>
