--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -39,7 +39,7 @@
               <a class="nav-link <%= pageName === 'messages' ? 'active' : '' %>" href="/messages">Messages</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link <%= pageName === 'tests' ? 'active' : '' %>" href="/">Patients</a>
+              <a class="nav-link <%= pageName === 'patients' ? 'active' : '' %>" href="/patients">Patients</a>
             </li>
             <li class="nav-item">
               <a class="nav-link <%= pageName === 'group therapy' ? 'active' : '' %>" href="/group-therapy">Group Therapy</a>
