--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,73 +1,89 @@
-.homepage-footer {
-  position: fixed;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  position: relative;
+  padding-bottom: 58px;
+  min-height: 100vh;
+}
+main {
+  margin: 0 auto;
+  padding: 30px 20px;
+  /* min-height: calc(100vh - 211px - 58px); */
+}
+footer {
+  text-align: center;
+  background-color: #F8F0DF;
+  color: #4b4c4d;
+  padding: 20px;
+  position: absolute;
   bottom: 0;
   width: 100%;
-
+  /* position: fixed;
+  z-index: 1; */
 }
 
-.footer-basic {
-    padding: 10px;
-    background-color:#F8F0DF;
-    color:#4b4c4d;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    
-  }
-  
-  .footer-basic ul {
-    padding:0;
-    list-style:none;
-    text-align:center;
-    font-size:18px;
-    line-height:1;
-    margin-bottom:0;
-  }
-  
-  .footer-basic li {
-    padding:0 5px;
-  }
-  
-  .footer-basic ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.8;
-  }
-  
-  .footer-basic ul a:hover {
-    opacity:1;
-  }
-  
-  .footer-basic .social {
-    text-align:center;
-    padding-bottom:25px;
-  }
-  
-  .footer-basic .social > a {
-    font-size:24px;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    border:1px solid #ccc;
-    margin:0 8px;
-    color:inherit;
-    opacity:0.75;
-  }
-  
-  .footer-basic .social > a:hover {
-    opacity:0.9;
-  }
-  
-  .footer-basic .copyright {
-    margin-top:15px;
-    text-align:center;
-    font-size:13px;
-    color:#aaa;
-    margin-bottom:0;
-  }
-  
-  
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 5px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom:0;
+}
+
+@media(max-width:768px) {
+  header { padding: 30px 20px; }
+  header h1 { font-size: 36px; margin-bottom: 22px; }
+  header p { font-size: 18px; }
+  main { width: 100vw; padding: 20px; }
+  article { margin-bottom: 16px; font-size: 14px; }
+  article h3 { margin: 10px 0 20px 0; }
+  article p { margin-top: 16px; line-height: 20px; }
+}
