--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,10 +4,10 @@
 
 </head>
 
-<body style="background-color: #FEFBF3;">
+<body style="background-color: #FEFBF3; position: relative; ">
 
   <%- include('./includes/navbar.ejs') %>
-  <div class="container">
+  <div class="container"">
   <main style="margin-top: 100px;">
 
     <% if(user.role === 'customer') { %>
@@ -95,22 +95,8 @@
     <% } %>
   </main>
 </div>
-    <div class="footer-basic" style="margin-top: 10px;">
-      <footer style="overflow: hidden;">
-          <div class="social container-fluid" style="padding-bottom:0;">
-              <a href=""><i class="fab fa-instagram"></i></a>
-              <a href=""><i class="fab fa-twitter"></i></a>
-              <a href=""><i class="fab fa-facebook-f"></i></a>
-            </div>
-          <!-- <ul class="list-inline">
-              <li class="list-inline-item"><a href="">Home</a></li>
-              <li class="list-inline-item"><a href="/therapists">Therapist List</a></li>
-              <li class="list-inline-item"><a href="#">About Us</a></li>
-          </ul> -->
-          <p class="copyright">Mosa3da © 2022</p>
-      </footer>
-  </div>
 
+<%- include('./includes/footer.ejs') %>
   
   
   
