--- a/views/therapist-List.ejs
+++ b/views/therapist-List.ejs
@@ -8,6 +8,9 @@
     
   <%- include('./includes/navbar.ejs') %>
 
+  <div class="container">
+
+
   <main style="margin-top: 100px;">
     <% if (usersAll.length > 0) { %>
         <div style="display: flex; justify-content: center; align-items: stretch; flex-wrap: wrap;">
@@ -55,7 +58,7 @@
     
     </main>
 
-
+</div>
 
 
 
