--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,3 +42,23 @@
         color: black;
         border: 2px solid black;
     }
+
+    hr.dashed {
+        border-top: 3px dashed #bbb;
+      }
+      
+      /* Dotted border */
+      hr.dotted {
+        border-top: 3px dotted #bbb;
+      }
+      
+      /* Solid border */
+      hr.solid {
+        border-top: 3px solid #bbb;
+      }
+      
+      /* Rounded border */
+      hr.rounded {
+        border-top: 8px solid #bbb;
+        border-radius: 5px;
+      }
