--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -15,14 +15,14 @@
                          <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
-
                          <ul class="navbar-nav ms-md-auto">
                               <li class="nav-item">
-                                   <a target="_blank" rel="noopener" class="nav-link"
-                                        href="https://github.com/thomaspark/bootswatch/"><i class="fa fa-globe"
-                                             aria-hidden="true"></i> العربية</a>
-                              </li>
-                         </ul>
+                                  <a class="nav-link" href="/signup">Sign Up</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="/login">Sign In</a>
+                                </li>
+                          </ul>
                     </div>
                </div>
           </div>
