--- a/views/edit-group-therapy.ejs
+++ b/views/edit-group-therapy.ejs
@@ -3,7 +3,7 @@
   <link rel="stylesheet" type="text/css" href="/css/account.css">
   </head>
 
-  <body>
+  <body style="background-color: #FEFBF3;">
     <%- include('./includes/navbar.ejs') %>
       <div class="container">
         <form action="/add-group-therapy" method="POST">
@@ -87,7 +87,7 @@
           
 
 
-          <div class="text-center" style="margin-top: -50px;">
+          <div class="text-center">
             <button type="submit" class="btn btn-primary btn-block"
               style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-top: 10px;">Add Room</button>
           </div>
