--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,15 +1,10 @@
-<div class="footer-basic" style="margin-top: 100px;">
+<div class="footer-basic" style="margin-top: 50px;">
     <footer>
       <div class="social container-fluid">
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/mosa3da"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.twitter.com/mosa3da"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/mosa3da"><i class="fab fa-facebook-f"></i></a>
       </div>
-    <!-- <ul class="list-inline">
-        <li class="list-inline-item"><a href="">Home</a></li>
-        <li class="list-inline-item"><a href="/therapists">Therapist List</a></li>
-        <li class="list-inline-item"><a href="#">About Us</a></li>
-    </ul> -->
     <p class="copyright">Mosa3da © 2022</p>
     </footer>
     </div>
